# Fastapi_OAUTH2_PASSWORD_BEARER

./: README.md  docker-compose.yaml  pyproject.toml
src/: .test.env
src/alembic/: env.py
src/alembic/versions/: 2024_12_01_0406-9ea8d1aeeb1f_init_revision.py
src/api/: v1.py
src/auth/: basic_auth.py  crud.py  routers.py  utils.py
src/config/: config.py
src/core/: fastapi_factory.py
src/dao/: models.py
src/database/: database.py  utils.py
src/dto/clients/: crud.py  schemas.py  utils.py
src/dto/passwords/: schemas.py  utils.py
src/dto/users/: crud.py  routers.py  schemas.py  utils.py
src/loggers/: loggers.py
tests/: conftest.py
tests/routes/: conftest.py  test_routes.py
