[tool.poetry]
name = "basic-auth"
version = "0.1.0"
description = ""
authors = ["Suslov Alexey <suslov.lexx@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.5"}
pydantic = {extras = ["email"], version = "^2.10.2"}
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
uvicorn = "^0.32.1"
asyncpg = "^0.30.0"
orjson = "^3.10.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
